# Blur-AutoClicker

./: .gitignore  Anti_AFK.py  BUILDING.md  BlurAutoClicker.ui  BlurAutoClickerUpdater.ui  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Info.md  Main_GUI.py  README.md  Readme.md  Updater.py  index.html  main.py  overlay.html  package-lock.json  package.json  test_c_clicker.py  ui_BlurAutoClicker.py  ui_mainwindow.py  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  support_question.yml
Scripts/: Anti_AFK.py  AutoClicker.py  C_Clicker.py  clicker_engine.c  clicker_engine.go
docs/: windows-release-trust.md
scripts/: bump-version.mjs
src/: App.tsx  C_Clicker.py  accentTheme.ts  cadence.ts  clicker_engine.go  hotkeys.ts  i18n.ts  index.css  numberInput.ts  settingsSchema.ts  settings_manager.py  store.ts  timerUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  autostart.rs  click_point_picker.rs  crash_handler.rs  custom_stop_zone_picker.rs  hotkeys.rs  lib.rs  main.rs  overlay.rs  sequence_picker.rs  single_instance.rs  telemetry.rs  ui_commands.rs  window_lifecycle.rs
src-tauri/src/engine/: cycle.rs  failsafe.rs  keyboard.rs  mod.rs  mouse.rs  process.rs  rng.rs  stats.rs  worker.rs
src-tauri/src/logitech/: commands.rs  device.rs  g502.rs  hid.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/updates/: update_checker.rs
(+95 files in other folders)
