[package]
name = "mrschnirschuhhub"
version = "3.8.0"
description = "MrSchnirschuhHub — auto clicker with Logitech device control. Linux native."
authors = ["Pandi"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mrschnirschuhhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-opener = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
serde_json = "1.0"
dirs = "6.0.0"

# Linux input simulation
enigo = { version = "0.2", features = ["wayland"] }

# HID for Logitech devices
hidapi = "2.6"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
debug = false
